#
# Copyright 2017, Data61
# Commonwealth Scientific and Industrial Research Organisation (CSIRO)
# ABN 41 687 119 230.
#
# This software may be distributed and modified according to the terms of
# the BSD 2-Clause license. Note that NO WARRANTY is provided.
# See "LICENSE_BSD2.txt" for details.
#
# @TAG(DATA61_BSD)
#

cmake_minimum_required(VERSION 3.7.2)

add_subdirectory(libsel4allocman)
add_subdirectory(libsel4vka)
add_subdirectory(libsel4utils)
add_subdirectory(libsel4vspace)
add_subdirectory(libsel4platsupport)
add_subdirectory(libsel4serialserver)
add_subdirectory(libsel4simple)
add_subdirectory(libsel4simple-default)
add_subdirectory(libsel4debug)
add_subdirectory(libsel4test)
add_subdirectory(libsel4sync)
add_subdirectory(libsel4muslcsys)
add_subdirectory(libsel4bench)
add_subdirectory(libsel4vmm)
